# BeaconGraph

./: .gitignore  BeaconGraph.py  CHANGELOG.md  LICENSE  README.md  beaconGraph.py  bg_gui.py  bg_parsers.py  bg_presets.py  docker-compose.yaml  neoHandler.py  requirements-linux-gui.txt  requirements-linux.txt  requirements.txt  settings.cfg
assets/: bg.css  material-icons.css
backend/: app.py  build_backend.py  dockerfile  pyproject.toml
backend/backend/: db.py  labels.py  main.py  parser.py
docs/samples/: mesh.csv  walk.csv
frontend/: dockerfile  package-lock.json  package.json  quasar.conf.js
frontend/src/: cy-config.js
frontend/src/components/: BeaconCytoscape.vue  DatabaseView.vue  DropdownQuery.vue  InfoTabs.vue  InfoView.vue  QueryView.vue
frontend/src/css/: app.sass
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: Login.vue
frontend/src/store/: index.js
samples/: .~lock.walk.csv#  flight.csv  mesh.csv  walk.csv
static/css/: beacongraph-green.css  beacongraph.css  cytoscape-context-menus.css
static/js/: beacongraph.js  cytoscape-context-menus.js  cytoscape-toolbar.js  cytoscape-view-utilities.js  cytoscape.min.js
templates/: index.html  login.html
